--- a/composer.json
+++ b/composer.json
@@ -1,13 +1,13 @@
 {
-    "name": "andatech-hrm/yii2-person",
-    "description": "Yii 2 for Person",
+    "name": "andatech-hrm/yii2-salary-calculation",
+    "description": "Yii 2 for Salary Calculation System",
     "type": "yii2-extension",
     "keywords": ["yii2","extension"],
     "license": "GPL-3.0",
     "minimum-stability": "stable",
     "support": {
-        "source": "https://github.com/andatech-hrm/yii2-person.git",
-        "issues": "https://github.com/andatech-hrm/yii2-person/issues"
+        "source": "https://github.com/andatech-hrm/yii2-salary-calculation.git",
+        "issues": "https://github.com/andatech-hrm/yii2-salary-calculation/issues"
     },
     "authors": [
         {
@@ -23,7 +23,7 @@
     ],
     "autoload": {
         "psr-4": {
-            "andahrm\\person\\": ""
+            "andahrm\\salaryCalculation\\": ""
         }
     },
     "extra": {
